# dispatcher

./: .gitignore  CMakeLists.txt  CMakePresets.json  Program.cs  README.md  _Imports.razor  vcpkg.json
backend/: CMakeLists.txt  README.md
backend/apps/dispatcher-e2e-smoke/: CMakeLists.txt  main.cpp
backend/apps/dispatcher-http-server/: CMakeLists.txt
backend/apps/dispatcher-http-server/src/: main.cpp
backend/apps/dispatcher-smoke/: CMakeLists.txt  main.cpp
backend/libs/dispatcher-alarm/: CMakeLists.txt
backend/libs/dispatcher-alarm/src/: alarm_acknowledgement_command.cpp  alarm_acknowledgement_command_validation.cpp  alarm_acknowledgement_record.cpp  alarm_acknowledgement_result.cpp  alarm_acknowledgement_store.cpp  alarm_catalog.cpp  alarm_catalog_validation.cpp  alarm_condition_catalog.cpp  alarm_condition_catalog_validation.cpp  alarm_condition_definition.cpp  alarm_condition_definition_validation.cpp  alarm_configuration_snapshot.cpp  alarm_configuration_snapshot_builder.cpp  alarm_configuration_snapshot_validation.cpp  alarm_definition.cpp  alarm_definition_builder.cpp  alarm_definition_validation.cpp  alarm_evaluation_result.cpp  alarm_evaluator.cpp  alarm_event_store.cpp  alarm_runtime.cpp  alarm_runtime_event.cpp  alarm_state_store.cpp  alarm_state_transition.cpp  alarm_suppression_command.cpp  alarm_suppression_mode.cpp  alarm_suppression_reason.cpp  alarm_suppression_record.cpp  alarm_suppression_result.cpp  alarm_suppression_runtime_snapshot.cpp  alarm_suppression_status.cpp  alarm_suppression_store.cpp  threshold_alarm_condition.cpp
backend/libs/dispatcher-api/: CMakeLists.txt
backend/libs/dispatcher-api/src/: alarm_acknowledgement_api_result.cpp  alarm_acknowledgement_request.cpp  alarm_operator_snapshot_api_result.cpp  api_page.cpp  api_page_request.cpp  api_result.cpp  api_status.cpp  api_status_mapping.cpp  configuration_export_api_result.cpp  configuration_query_api_result.cpp  configuration_query_request.cpp  configuration_reload_api_result.cpp  configuration_reload_request.cpp  dispatcher_alarm_api.cpp  dispatcher_api.cpp  dispatcher_configuration_api.cpp  dispatcher_history_api.cpp  dispatcher_runtime_api.cpp  dispatcher_telemetry_api.cpp  history_query_api_result.cpp  history_query_request.cpp  runtime_snapshot_api_result.cpp  telemetry_ingest_api_result.cpp  telemetry_ingest_request.cpp  transport_adapter.cpp  transport_adapter_options.cpp  transport_adapter_registry.cpp  transport_adapter_result.cpp  transport_adapter_status.cpp  transport_endpoint.cpp  transport_endpoint_catalog.cpp  transport_endpoint_registry.cpp  transport_endpoint_result.cpp  transport_endpoint_status.cpp  transport_error.cpp  transport_handler.cpp  transport_method.cpp  transport_protocol.cpp  transport_request.cpp  transport_request_context.cpp  (+6 more)
backend/libs/dispatcher-auth-audit/: CMakeLists.txt
backend/libs/dispatcher-auth-audit/src/: auth_audit_logger.cpp  auth_audit_validator.cpp  auth_authorization_policy.cpp  auth_operation_context.cpp  authorization_audit_recorder.cpp  http_auth_audit_adapter.cpp  in_memory_auth_audit_sink.cpp  runtime_auth_audit_adapter.cpp
backend/libs/dispatcher-common/: CMakeLists.txt
backend/libs/dispatcher-common/src/: version.cpp
backend/libs/dispatcher-config/: CMakeLists.txt
backend/libs/dispatcher-config/src/: configuration_document.cpp  configuration_document_result.cpp  configuration_export_device.cpp  configuration_export_metadata.cpp  configuration_export_model.cpp  configuration_export_model_result.cpp  configuration_export_options.cpp  configuration_export_tag.cpp  configuration_exporter.cpp  configuration_format.cpp  configuration_import_device.cpp  configuration_import_metadata.cpp  configuration_import_model.cpp  configuration_import_model_mapper.cpp  configuration_import_model_result.cpp  configuration_import_tag.cpp  configuration_importer.cpp  configuration_io_result.cpp  configuration_io_status.cpp  configuration_json_export_serializer.cpp  configuration_json_import_parser.cpp  configuration_snapshot_export_mapper.cpp  configuration_snapshot_import_result.cpp
backend/libs/dispatcher-core/: CMakeLists.txt
backend/libs/dispatcher-core/src/: current_state_store.cpp  (+1 more)
backend/libs/dispatcher-domain/: CMakeLists.txt
backend/libs/dispatcher-history/: CMakeLists.txt
backend/libs/dispatcher-http/: CMakeLists.txt
backend/libs/dispatcher-modbus/: CMakeLists.txt
backend/libs/dispatcher-notification-delivery/: CMakeLists.txt
backend/libs/dispatcher-runtime/: CMakeLists.txt
backend/libs/dispatcher-simulator/: CMakeLists.txt
backend/libs/dispatcher-storage/: CMakeLists.txt
backend/libs/dispatcher-storage-sqlite/: CMakeLists.txt
backend/libs/dispatcher-telemetry/: CMakeLists.txt
tests/unit/: CMakeLists.txt  alarm_acknowledgement_command_tests.cpp  alarm_acknowledgement_command_validation_tests.cpp  alarm_acknowledgement_model_tests.cpp  alarm_acknowledgement_store_tests.cpp  alarm_batch_evaluation_tests.cpp  alarm_catalog_tests.cpp  alarm_condition_catalog_tests.cpp  alarm_configuration_snapshot_tests.cpp  alarm_configured_evaluation_tests.cpp  alarm_definition_tests.cpp  alarm_evaluator_tests.cpp  alarm_event_store_tests.cpp  alarm_operator_snapshot_tests.cpp  alarm_operator_suppression_snapshot_tests.cpp  alarm_runtime_acknowledge_tests.cpp  alarm_runtime_acknowledgement_audit_tests.cpp  alarm_runtime_index_tests.cpp  alarm_runtime_reload_prune_tests.cpp  alarm_runtime_reload_tests.cpp  alarm_runtime_snapshot_tests.cpp  alarm_runtime_state_query_tests.cpp  alarm_runtime_suppression_evaluation_tests.cpp  alarm_runtime_suppression_tests.cpp  alarm_runtime_tests.cpp  alarm_state_store_tests.cpp  alarm_state_transition_tests.cpp  alarm_suppression_model_tests.cpp  alarm_suppression_snapshot_tests.cpp  alarm_suppression_store_tests.cpp  alarm_threshold_condition_tests.cpp  api_alarm_tests.cpp  api_configuration_io_tests.cpp  api_configuration_tests.cpp  api_dispatcher_facade_tests.cpp  api_history_tests.cpp  api_page_tests.cpp  api_result_tests.cpp  api_runtime_tests.cpp  api_status_mapping_tests.cpp  (+108 more)
(+549 files in other folders)
