add_subdirectory(libs/dispatcher-common)
add_subdirectory(libs/dispatcher-domain)
add_subdirectory(libs/dispatcher-telemetry)
add_subdirectory(libs/dispatcher-modbus)
add_subdirectory(libs/dispatcher-core)
add_subdirectory(libs/dispatcher-history)
add_subdirectory(libs/dispatcher-alarm)
add_subdirectory(libs/dispatcher-config)
add_subdirectory(libs/dispatcher-storage)
add_subdirectory(libs/dispatcher-runtime)
add_subdirectory(libs/dispatcher-api)
add_subdirectory(libs/dispatcher-simulator)

add_subdirectory(apps/dispatcher-smoke)
add_subdirectory(apps/dispatcher-e2e-smoke)
add_subdirectory(apps/dispatcher-http-server)
add_subdirectory(libs/dispatcher-http)
add_subdirectory(libs/dispatcher-storage-sqlite)
add_subdirectory(libs/dispatcher-notification-delivery)
add_subdirectory(libs/dispatcher-auth-audit)